[Spring 지하철 노선도 - 3단계] 이스트(신동훈) 미션 제출합니다. (#290)
* docs(README.md): 3단계 요구사항 목록 추가

* feat(domain): 노선 추가시 구간을 자동으로 등록하는 도메인 기능 구현

* feat(domain): Sections 일급 컬렉션으로 책임 분리

* feat: 노선을 추가할때 구간이 등록되는 기능 구현

노선 조회 기능 구현

* feat: 구간을 등록하는 기능 구현

* feat(domain): 구간을 등록할 때 하행 갈래길 방지 도메인 기능 구현

* feat(domain): 상행 종점 구간 등록 도메인 기능 구현

* feat(domain): 하행 종점 구간 등록 도메인 기능 구현

- 역 사이에 구간을 등록할 때 원래 구간보다 길이가 크거나 같을 경우 등록이 불가한 기능 구현
- 상행역과 하행역이 이미 노선에 존재하면 등록이 불가한 기능 구현

* feat(domain): 상행역과 하행역 둘 다 노선에 포함되어 있지 않으면 등록이 불가한 기능 구현

* refactor(LineResponse): 변수명 변경

* docs(README.md): 요구사항 체크박스 업데이트

* refactor(test): 클래스명 변경

* feat(domain): 상행 종점을 제거하는 경우 다음역이 종점이 되는 기능 구현

* feat(domain): 하행 종점을 제거하는 경우 이전역이 종점이 되는 기능 구현

* feat(domain): 중간역을 제거할 경우 재배치가 되는 기능 구현

* feat(domain): 마지막 구간은 제거할 수 없는 기능 구현

* feat: 구간 삭제 기능 구현

* refactor(Sections): 메서드 추출

* refactor(acceptance): 자주 사용하는 로직 fixture로 분리

* refactor(dao): entity를 반환하지 않고 도메인 객체를 반환하도록 변경

* refactor(SectionService): 구간 수정 로직의 메서드 추출

* refactor(test): 구현 코드 변경에 따른 테스트 코드 수정

* refactor(domain/Sections): 메서드 추출

* test(acceptance): 구간 등록/삭제에 대한 인수 테스트 작성

* test(dao): SectionDao 테스트 코드 작성

* refactor(ui): request body에 대한 검증 추가

* refactor(domain): 생성자를 정적 팩토리 메서드로 대체

* refactor(SectionService): `@Transactional` 부착

* refactor(SubwayExceptionController): `@Valid` 에 대한 예외 핸들링 추가

* refactor(domain): 이름 검증을 추가하고 Name 클래스로 분리

* refactor(controller): 삭제 요청에 대한 응답을 204로 변경

* refactor(SectionDao): 리스트에 대한 save를 batchUpdate를 사용하여 성능 향상

* refactor(LineDao): find할 때 Line 객체를 완성하여 반환하도록 변경

* refactor(Sections): 지하철 역을 구간대로 정렬하여 반환하도록 변경

* refactor(application): lineService에서 구간에 대한 역할을 수행 하도록 변경

* refactor(test/LineServiceTest): 테스트에서만 사용하는 메서드를 운영코드에 만들지 않도록 변경

* test(ui/StationControllerTest): Station 컨트롤러 통합 테스트 작성

* test(ui/LineControllerTest): Line 컨트롤러 통합 테스트 작성